testsuite/tests/vdq-rta/should_fail/T22326_fail_notInScope.hs
{-# LANGUAGE ExplicitNamespaces #-}
{-# LANGUAGE RequiredTypeArguments #-}

module T22326_fail_notInScope where

x = notInScope (type Int)
