testsuite/tests/vdq-rta/should_fail/T22326_fail_notInScope.stderr

T22326_fail_notInScope.hs:6:5: error: [GHC-88464]
    Variable not in scope: notInScope
